--- a/app/views/admin/document_collection_groups/legacy_index.html.erb
+++ b/app/views/admin/document_collection_groups/legacy_index.html.erb
@@ -52,7 +52,7 @@
       <section class="group">
         <header class="js-group-header">
           <h2>
-            <span class="small">Group</span><br/>
+            <span class="small">Group</span><br>
             <%= group.heading %>
           </h2>
           <ul class="actions">
@@ -67,7 +67,7 @@
         <div class="js-group-body">
           <% if group.editable_members.empty? %>
             <p class="no-content no-content-bordered js-document-group" data-group-id="<%= group.id %>">
-              No documents in this group<br />
+              No documents in this group<br >
               Add documents by searching or dragging them from another group.
             </p>
           <% else %>
