Run space_in_html_tag linter

--- a/app/views/admin/topical_event_organisations/_organisations_table.html.erb
+++ b/app/views/admin/topical_event_organisations/_organisations_table.html.erb
@@ -1,4 +1,4 @@
-<div id=<%= lead ? "lead_organisations" : "supporting_organisations" %> class="govuk-!-padding-bottom-20">
+<div id=<%= lead ? "lead_organisations" : "supporting_organisations" %>>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-half govuk-heading-m">
       <%= lead ? "Lead organisations" : "Supporting organisations" %>
