--- a/app/views/components/_miller-columns-list.html.erb
+++ b/app/views/components/_miller-columns-list.html.erb
@@ -3,8 +3,7 @@
     <li>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" type="checkbox" name="<%= name %>" value="<%= item[:value] %>" id="<%= id %>-<%= index %>"
-          <% if check_item?(item) %> checked <% end %>
-        >
+          <% if check_item?(item) %> checked <% end %>>
         <label class="govuk-label govuk-checkboxes__label" for="<%= id %>-<%= index %>">
           <%= item[:label] %>
         </label>
