--- a/app/views/admin/world_location_news_translations/index.html.erb
+++ b/app/views/admin/world_location_news_translations/index.html.erb
@@ -66,8 +66,12 @@
             name: "translation_locale",
             label: "Select Language",
             heading_size: "m",
-            options: @world_location_news.missing_translations.map do |missing_trans| { text: missing_trans
-              .native_and_english_language_name, value: missing_trans.code.to_s } end,
+            options: @world_location_news.missing_translations.map do |missing_trans|
+              {
+                text: missing_trans.native_and_english_language_name,
+                value: missing_trans.code.to_s,
+              }
+            end,
           } %>
 
           <%= render "govuk_publishing_components/components/button", {
