--- a/app/views/admin/organisations/_form.html.erb
+++ b/app/views/admin/organisations/_form.html.erb
@@ -99,7 +99,7 @@
       error_items: errors_for(organisation.default_news_image.errors, :default_news_image),
       image_src: organisation.default_news_image.file.url,
       image_cache_name: "organisation[default_news_image_attributes][file_cache]",
-      image_cache: (organisation.default_news_image.file_cache if organisation.default_news_image.file_cache.present?),
+      image_cache: (organisation.default_news_image.file_cache.presence),
     } %>
   <% end %>
 
