--- a/app/views/admin/worldwide_organisations/_form.html.erb
+++ b/app/views/admin/worldwide_organisations/_form.html.erb
@@ -74,7 +74,7 @@
     error_items: errors_for(worldwide_organisation.default_news_image.errors, :default_news_image),
     image_src: worldwide_organisation.default_news_image.file.url,
     image_cache_name: "worldwide_organisation[default_news_image_attributes][file_cache]",
-    image_cache: (worldwide_organisation.default_news_image.file_cache if worldwide_organisation.default_news_image.file_cache.present?),
+    image_cache: (worldwide_organisation.default_news_image.file_cache.presence),
   } %>
 
   <div class="govuk-button-group govuk-!-margin-top-8">
