Run Rails/LinkToBlank cop

--- a/app/views/admin/attachments/_form.html.erb
+++ b/app/views/admin/attachments/_form.html.erb
@@ -73,7 +73,7 @@
               "track-category": "button-clicked",
               "track-action": "#{attachable.model_name.singular.dasherize}-button",
               "track-label": "Preview on website",
-            }) %>
+            }, rel: "noopener") %>
           </p>
           <p class="govuk-body">
             To preview your document on GOV.UK you must save it first.
