--- a/app/views/admin/detailed_guides/_form.html.erb
+++ b/app/views/admin/detailed_guides/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="format-advice">
   <p class="govuk-body">Detailed guides tell users the steps they need to take to complete a specific task. They are usually aimed at specialist or professional audiences.</p>
-  <p class="govuk-body">Read the <%= link_to "detailed guides guidance", "https://www.gov.uk/guidance/content-design/content-types#detailed-guide", class: "govuk-link", target: "_blank" %> in full.</p>
+  <p class="govuk-body">Read the <%= link_to "detailed guides guidance", "https://www.gov.uk/guidance/content-design/content-types#detailed-guide", class: "govuk-link", target: "_blank", rel: "noopener" %> in full.</p>
 </div>
 
 <%= standard_edition_form(edition) do |form| %>
