--- a/app/views/admin/edition_images/_image_upload.html.erb
+++ b/app/views/admin/edition_images/_image_upload.html.erb
@@ -22,7 +22,8 @@
       Find out <%= link_to "how to create an SVG file (opens in new tab)",
       "https://www.gov.uk/guidance/how-to-publish-on-gov-uk/images-and-videos#creating-an-svg-file",
       class: "govuk-link",
-      target: "_blank" %>.
+      target: "_blank",
+      rel: "noopener" %>.
     <% end %>
 
   <%= render "govuk_publishing_components/components/button", {
