--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -77,6 +77,7 @@
         @edition.public_url(draft: true, locale: @edition.primary_locale),
         class: "govuk-link",
         target: "_blank",
+        rel: "noopener",
         data: {
           module: "gem-track-click",
           "track-category": "button-clicked",
