Run parser_errors linter and exclude two files
There's some bizzare behaviour going on in both of the excluded files.

The autocomplete.js.erb is complaining that a space is needed in
within a loop where the syntax is definitely correct.

I don't think it's worth digging through the massive file to figure out
what the issue is though as this will be removed when Bootstrap is
removed. I'm not even sure it's actually being used anywhere at the
moment.

For app/views/admin/find_in_admin_bookmarklet/_bookmarklet.erb. When you
ran the space_within_tag linter it tries to rewrite the whole function
(and breaks the functionality).

Again this is a giant file, which isn't ever touched so i dont think it's
worth the time rewriting it.

--- a/app/views/admin/corporate_information_pages/_standard_fields.html.erb
+++ b/app/views/admin/corporate_information_pages/_standard_fields.html.erb
@@ -1,4 +1,4 @@
-<div class=<%= "right-to-left" if edition.rtl? %>>
+<div class="<%= "right-to-left" if edition.rtl? %>">
   <%= render "subtype_fields", form: form, edition: form.object %>
   <%= form.hidden_field :lock_version %>
 
