--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -1,4 +1,4 @@
-<div class=<%= "right-to-left" if edition.rtl? %>>
+<div class="<%= "right-to-left" if edition.rtl? %>">
   <%= render "subtype_fields", form: form, edition: form.object %>
   <%= render "locale_fields", form: form, edition: edition %>
   <%= form.hidden_field :lock_version %>
@@ -6,7 +6,7 @@
   <% if edition.document&.slug.present? %>
     <div class="govuk-!-margin-bottom-8">
       <label for="edition_slug" class="gem-c-label govuk-label govuk-label--l govuk-!-font-weight-bold">Slug (read only)</label>
-      <input disabled="disabled" autocomplete="off" class="gem-c-input govuk-input govuk-body" id="edition_slug" name="edition[slug]" readonly="readonly" spellcheck="false" type="text" value=<%= edition.slug %>>
+      <input disabled="disabled" autocomplete="off" class="gem-c-input govuk-input govuk-body" id="edition_slug" name="edition[slug]" readonly="readonly" spellcheck="false" type="text" value="<%= edition.slug %>">
     </div>
   <% end %>
 
