--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@ $govuk-page-width: 1140px;
 @import "./admin/views/dashboard-index";
 @import "./admin/views/document-history-tab";
 @import "./admin/views/document-collection-group-memberships-index";
+@import "./admin/views/document-collection-group-document-search-search-title-slug";
 @import "./admin/views/edit-edition";
 @import "./admin/views/edit-person";
 @import "./admin/views/edition-resource";
