--- a/app/views/admin/document_collection_group_document_search/search_title_slug.html.erb
+++ b/app/views/admin/document_collection_group_document_search/search_title_slug.html.erb
@@ -3,16 +3,53 @@
     href: admin_document_collection_group_search_options_path(@collection, @group),
   } %>
 <% end %>
-<% content_for :page_title, 'Add document' %>
-<% content_for :title, 'Add document' %>
+<% content_for :page_title, "Add document" %>
+<% content_for :title, "Add document" %>
 <% content_for :context, @group.heading %>
 <% content_for :title_margin_bottom, 4 %>
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <%= render "govuk_publishing_components/components/search", {
-      label_text: 'Search by title or slug',
-      label_size: "l"
-    } %>
+  <div class="govuk-grid-column-two-thirds app-view-document-collection-document-search-bar">
+    <%= form_with method: :get do |_form| %>
+      <%= render "govuk_publishing_components/components/search", {
+        name: "query",
+        value: params[:query],
+        label_text: "Search by title or slug",
+        label_size: "l",
+      } %>
+    <% end %>
   </div>
+
+  <% if @results %>
+    <div class="govuk-grid-column-two-thirds app-view-document-collection-document-search-results">
+      <p class="govuk-heading-s govuk-!-margin-bottom-3"><%= pluralize(number_with_delimiter(@results.count), "document") %></p>
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+      <% if @results.empty? %>
+        <p class="govuk-body app-view-document-collection-document-search-results__no_documents">No documents found</p>
+      <% else %>
+        <div class="govuk-table--with-actions app-view-document-collection-document-search-results__table">
+          <%= render "govuk_publishing_components/components/table", {
+            rows: @results.map do |edition|
+              [{
+                text: tag.span(index_table_title_row(edition), class: "govuk-!-font-weight-bold"),
+              }, {
+                text:
+                  link_to(sanitize("View #{tag.span(edition.title, class: "govuk-visually-hidden")}"), edition.public_url, class: "govuk-link") +
+                    button_to("Add",
+                              admin_document_collection_new_whitehall_member_path(@collection),
+                              method: :post,
+                              params: {
+                                group_id: @group.id,
+                                document_id: edition.document.id,
+                              },
+                              aria: { label: "Add document to the document collection group" },
+                              class: "gem-c-button govuk-button govuk-button--secondary",
+                    ),
+              }]
+            end
+          } %>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
 </div>
