--- a/app/views/admin/document_collection_group_document_search/search_title_slug.html.erb
+++ b/app/views/admin/document_collection_group_document_search/search_title_slug.html.erb
@@ -22,32 +22,33 @@
 
   <% if @results %>
     <div class="govuk-grid-column-two-thirds app-view-document-collection-document-search-results">
+
       <p class="govuk-heading-s govuk-!-margin-bottom-3"><%= pluralize(number_with_delimiter(@results.count), "document") %></p>
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
       <% if @results.empty? %>
         <p class="govuk-body app-view-document-collection-document-search-results__no_documents">No documents found</p>
       <% else %>
         <div class="govuk-table--with-actions app-view-document-collection-document-search-results__table">
-          <%= render "govuk_publishing_components/components/table", {
-            rows: @results.map do |edition|
-              [{
-                text: tag.span(index_table_title_row(edition), class: "govuk-!-font-weight-bold"),
-              }, {
-                text:
-                  link_to(sanitize("View #{tag.span(edition.title, class: "govuk-visually-hidden")}"), edition.public_url, class: "govuk-link") +
-                    button_to("Add",
-                              admin_document_collection_new_whitehall_member_path(@collection),
-                              method: :post,
-                              params: {
-                                group_id: @group.id,
-                                document_id: edition.document.id,
-                              },
-                              aria: { label: "Add document to the document collection group" },
-                              class: "gem-c-button govuk-button govuk-button--secondary",
-                    ),
-              }]
-            end
-          } %>
+          <%= render "govuk_publishing_components/components/table",
+                     {
+                       rows: @results.map do |edition|
+                         title_span = tag.span(index_table_title_row(edition), class: "govuk-!-font-weight-bold")
+                         view_link = link_to(sanitize("View #{tag.span(edition.title, class: "govuk-visually-hidden")}"), edition.public_url, class: "govuk-link")
+                         add_button = button_to("Add",
+                                                admin_document_collection_new_whitehall_member_path(@collection),
+                                                method: :post,
+                                                params: {
+                                                  group_id: @group.id,
+                                                  document_id: edition.document.id,
+                                                },
+                                                aria: { label: "Add document to the document collection group" },
+                                                class: "gem-c-button govuk-button govuk-button--secondary",
+                         )
+
+                         [{ text: title_span }, { text: view_link + add_button }]
+                       end,
+                     } %>
         </div>
       <% end %>
     </div>
