GA track Adding document to document collection group

--- a/app/views/admin/document_collection_group_document_search/search_title_slug.html.erb
+++ b/app/views/admin/document_collection_group_document_search/search_title_slug.html.erb
@@ -44,6 +44,12 @@
                                                 },
                                                 aria: { label: "Add document to the document collection group" },
                                                 class: "gem-c-button govuk-button govuk-button--secondary",
+                                                data_attributes: {
+                                                  module: "gem-track-click",
+                                                  "track-category": "form-button",
+                                                  "track-action": "add-document-to-collection-group-button",
+                                                  "track-label": "Add",
+                                                },
                          )
 
                          [{ text: title_span }, { text: view_link + add_button }]
