--- a/app/views/admin/document_collection_group_memberships/confirm_destroy.html.erb
+++ b/app/views/admin/document_collection_group_memberships/confirm_destroy.html.erb
@@ -15,8 +15,8 @@
             module: "gem-track-click",
             "track-category": "form-button",
             "track-action": "remove-document-from-collection-group-button",
-            "track-label": "Remove"
-          }
+            "track-label": "Remove",
+          },
         } %>
         <%= link_to("Cancel", admin_document_collection_group_members_path(@collection, @group), class: "govuk-link govuk-link--no-visited-state") %>
       </div>
