--- a/app/views/admin/document_collection_groups/confirm_destroy.html.erb
+++ b/app/views/admin/document_collection_groups/confirm_destroy.html.erb
@@ -15,8 +15,8 @@
             module: "gem-track-click",
             "track-category": "form-button",
             "track-action": "delete-document-collection-group-button",
-            "track-label": "Delete"
-          }
+            "track-label": "Delete",
+          },
         } %>
         <%= link_to("Cancel", admin_document_collection_groups_path(@collection), class: "govuk-link govuk-link--no-visited-state") %>
       </div>
