--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,7 @@ $govuk-page-width: 1140px;
 @import "./admin/views/organisations-edit";
 @import "./admin/views/people";
 @import "./admin/views/roles";
+@import "./admin/views/users";
 @import "./admin/views/summary";
 @import "./admin/views/take-part";
 @import "./admin/views/topical-events-index";
