Introduce details and settings field templates
Use these templates to organise the edition form under headings.
Centralise images and attachments in the content form.

--- a/app/views/admin/editions/_access_limiting_fields.html.erb
+++ b/app/views/admin/editions/_access_limiting_fields.html.erb
@@ -2,7 +2,7 @@
   <%= render "govuk_publishing_components/components/fieldset", {
     legend_text: "Limit access",
     heading_level: 3,
-    heading_size: "l",
+    heading_size: "m",
   } do %>
     <%= form.hidden_field :access_limited, value: "0" %>
 
