--- a/app/views/admin/news_articles/_news_article_type_fields.html.erb
+++ b/app/views/admin/news_articles/_news_article_type_fields.html.erb
@@ -3,7 +3,7 @@
     name: "edition[news_article_type_id]",
     id: "edition_news_article_type_id",
     label: "News article type (required)",
-    heading_size: "l",
+    heading_size: "m",
     value: edition.news_article_type_id,
     error_message: errors_for_input(edition.errors, :news_article_type_id),
     include_blank: true,
