--- a/app/views/admin/publications/_publication_type_fields.html.erb
+++ b/app/views/admin/publications/_publication_type_fields.html.erb
@@ -3,7 +3,7 @@
     id: "edition_publication_type_id",
     name: "edition[publication_type_id]",
     label: "Publication type (required)",
-    heading_size: "l",
+    heading_size: "m",
     value: edition.publication_type_id,
     error_message: errors_for_input(edition.errors, :publication_type_id),
     include_blank: true,
