--- a/app/views/admin/speeches/_speech_type_fields.html.erb
+++ b/app/views/admin/speeches/_speech_type_fields.html.erb
@@ -3,7 +3,7 @@
     name: "edition[speech_type_id]",
     id: "edition_speech_type_id",
     label: "Speech type",
-    heading_size: "l",
+    heading_size: "m",
     value: edition.speech_type_id,
     error_message: errors_for_input(edition.errors, :speech_type_id),
     include_blank: true,
