--- a/app/views/admin/editions/_first_published_at.html.erb
+++ b/app/views/admin/editions/_first_published_at.html.erb
@@ -1,4 +1,5 @@
 <% first_published_at_fields = render("components/datetime_fields", {
+      heading_size: "s",
       field_name: "first_published_at",
       prefix: "edition",
       date_hint: "For example, 01 08 2022",
@@ -37,10 +38,10 @@
     }) %>
 
 <% if edition.published_major_version.nil? %>
-  <div class="govuk-!-margin-bottom-4">
+  <div>
     <%= render "govuk_publishing_components/components/fieldset", {
       legend_text: "Document status (required)",
-      heading_size: "l",
+      heading_size: "m",
       id: "edition_first_published_at",
     } do %>
       <%= render "govuk_publishing_components/components/radio", {
@@ -64,10 +65,10 @@
   </div>
   <% end %>
 <% else %>
-  <div class="govuk-!-margin-bottom-4">
+  <div>
     <%= render "govuk_publishing_components/components/fieldset", {
       legend_text: "First published",
-      heading_size: "l",
+      heading_size: "m",
       hint: "For example, 31 3 2000",
       id: "edition_first_published_at",
       error_message: errors_for_input(edition.errors, :first_published_at),
