--- a/app/views/admin/editions/_html_version_fields.html.erb
+++ b/app/views/admin/editions/_html_version_fields.html.erb
@@ -1,5 +1,5 @@
-<div class="govuk-!-margin-bottom-8">
-  <h3 class="govuk-heading-l">HTML attachment</h3>
+<div class="govuk-!-margin-bottom-6">
+  <h3 class="govuk-heading-m">HTML attachment</h3>
 
   <p class="govuk-body">
     <% if @edition.persisted? %>
