--- a/app/views/admin/editions/_content_fields.html.erb
+++ b/app/views/admin/editions/_content_fields.html.erb
@@ -129,7 +129,7 @@
     <%= render "govuk_publishing_components/components/heading", {
         text: "Images",
         heading_level: 3,
-        font_size: "l",
+        font_size: "m",
         margin_bottom: 3,
     } %>
     <p class="govuk-body">
