--- a/app/views/admin/editions/_operational_field_fields.html.erb
+++ b/app/views/admin/editions/_operational_field_fields.html.erb
@@ -2,7 +2,7 @@
   id: "edition_operational_field_id",
   label: "Field of operation (required)",
   name: "edition[operational_field_id]",
-  heading_size: "l",
+  heading_size: "m",
   error_message: errors_for_input(edition.errors, :operational_field_id),
   include_blank: true,
   options: OperationalField.all.map do |operation|
