--- a/app/views/admin/speeches/_additional_significant_fields.html.erb
+++ b/app/views/admin/speeches/_additional_significant_fields.html.erb
@@ -5,7 +5,7 @@
   <%= render "govuk_publishing_components/components/input", {
     label: {
       text: "Location",
-      heading_size: "l",
+      heading_size: "m",
     },
     name: "edition[location]",
     id: "edition_location",
