--- a/app/views/admin/speeches/_delivered_by_fields.html.erb
+++ b/app/views/admin/speeches/_delivered_by_fields.html.erb
@@ -3,7 +3,7 @@
     name: "edition[speaker_radios]",
     id: "edition_role_appointment",
     heading: edition.authored_article? ? "Writer (required)" : "Speaker (required)",
-    heading_size: "l",
+    heading_size: "m",
     error_items: errors_for(edition.errors, :role_appointment),
     items: [
       {
