--- a/app/views/admin/detailed_guides/_form.html.erb
+++ b/app/views/admin/detailed_guides/_form.html.erb
@@ -38,12 +38,12 @@
   <%= render "govuk_publishing_components/components/fieldset", {
     legend_text: "Related mainstream content",
     heading_level: 3,
-    heading_size: "l",
+    heading_size: "m",
   } do %>
     <%= render "govuk_publishing_components/components/input", {
       label: {
         text: "Related mainstream content url",
-        heading_size: "m",
+        heading_size: "s",
       },
       hint: "Link to the top-level URL for mainstream content - not a specific chapter.",
       name: "edition[related_mainstream_content_url]",
@@ -54,7 +54,7 @@
     <%= render "govuk_publishing_components/components/input", {
       label: {
         text: "Additional related mainstream content url",
-        heading_size: "m",
+        heading_size: "s",
       },
       name: "edition[additional_related_mainstream_content_url]",
       id: "edition_additional_related_mainstream_content_url",
